--- a/01.project/index.html
+++ b/01.project/index.html
@@ -17,16 +17,18 @@
 		<nav class="global-nav">
 			<!-- 최상단 메뉴 -->
 			<div class="global-nav-links">
-				<a href="#" class="global-nav-item">Rooms</a>
-				<a href="#" class="global-nav-item">Ideas</a>
-				<a href="#" class="global-nav-item">Stores</a>
-				<a href="#" class="global-nav-item">Contact</a>
+				<a href="#" class="global-nav-item">menu1</a>
+				<a href="#" class="global-nav-item">menu2</a>
+				<a href="#" class="global-nav-item">menu3</a>
+				<a href="#" class="global-nav-item">menu4</a>
+				<a href="#" class="global-nav-item">menu5</a>
+				<a href="#" class="global-nav-item">menu6</a>
 			</div>
 		</nav>
 		<!-- 두번째 메뉴 -->
 		<nav class="local-nav">
 			<div class="local-nav-links">
-				<a href="#" class="product-name">페이지 제목</a>
+				<a href="#" class="logo">페이지 로고</a>
 				<a href="#">개요</a>
 				<a href="#">제품사양</a>
 				<a href="#">구입하기</a>
@@ -84,6 +86,55 @@
 
 		</section>
 
+		<!-- 두개짜리 박스 넣어보기 -->
+		<section>
+			<!-- 두개짜리 박스 -->
+			<div class="halfbox-container">
+				<div class="half-box">
+						<div class="tile-header">
+								<div class="tile-headline">가나다라</div>
+								<div class="tile-headtext">
+										<p>‘집중 모드’는 집중이 필요한 순간에도, 휴식이 필요한 순간에도 당신이 매 순간 몰두할 수 있도록 도와줍니다. 원하는 집중 모드를 선택해 받고 싶은 알림만 울리도록
+												설정할 수 있죠. 무아지경으로 일에만 몰두할 수도, 방해 없이 느긋하게 저녁 식사를 즐길 수도 있습니다. 제시된 집중 모드 중 원하는 옵션을 골라 사용하거나,
+												자신만의 집중 모드를 직접 만들 수도 있답니다.</p>
+								</div>
+						</div>
+
+						<div class="tile-body">
+								<p>
+										이미지가 들어갈만한 곳. 순간에도, 휴식이 필요한 순간에도 당신이 매 순간 몰두할 수 있도록 도와줍니다.
+										원하는 집중 모드를 선택해 받고 싶은 알림만 울리도록 설정할 수 있죠. 무아지경으로 일에만 몰두할 수도,
+										방해 없이 느긋하게 저녁 식사를 즐길 수도 있습니다. 제시된 집중 모드 중 원하는 옵션을 골라 사용하거나,
+										자신만의 집중 모드를 직접 만들 수도 있답니다.
+								</p>
+						</div>
+				</div>
+
+				<div class="half-box">
+						<div class="tile-header">
+								<div class="tile-headline">가나다라</div>
+								<div class="tile-headtext">
+										<p>‘집중 모드’는 집중이 필요한 순간에도, 휴식이 필요한 순간에도 당신이 매 순간 몰두할 수 있도록 도와줍니다. 원하는 집중 모드를 선택해 받고 싶은 알림만 울리도록
+												설정할 수 있죠. 무아지경으로 일에만 몰두할 수도, 방해 없이 느긋하게 저녁 식사를 즐길 수도 있습니다. 제시된 집중 모드 중 원하는 옵션을 골라 사용하거나,
+												자신만의 집중 모드를 직접 만들 수도 있답니다.</p>
+								</div>
+						</div>
+
+						<div class="tile-body">
+								<p>
+										이미지가 들어갈만한 곳. 순간에도, 휴식이 필요한 순간에도 당신이 매 순간 몰두할 수 있도록 도와줍니다.
+										원하는 집중 모드를 선택해 받고 싶은 알림만 울리도록 설정할 수 있죠. 무아지경으로 일에만 몰두할 수도,
+										방해 없이 느긋하게 저녁 식사를 즐길 수도 있습니다. 제시된 집중 모드 중 원하는 옵션을 골라 사용하거나,
+										자신만의 집중 모드를 직접 만들 수도 있답니다.
+								</p>
+						</div>
+				</div>
+		</div>
+		<!-- ----------------------22222222------------- -->
+
+
+		</section>
+
 
 
 		<!-- 3333333333333333333333333333333333333333 -->
@@ -96,6 +147,38 @@
 			<p class="canvas-caption">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur quos voluptatum quae atque veniam, exercitationem eum vitae nam reiciendis animi explicabo recusandae possimus maxime ipsum harum architecto nesciunt iure eveniet pariatur mollitia soluta esse? Laborum error ullam quisquam ipsa quam debitis, natus quis. Magnam est corrupti ratione id, quod maxime dolores sequi vero similique mollitia repellendus perferendis? Soluta perferendis eum itaque dolorem amet, esse quisquam sint pariatur nam enim deserunt vel quas quis ullam nesciunt perspiciatis eveniet ab, praesentium repellendus vitae dolor aliquid, animi asperiores! Tenetur cum, eveniet eum illum placeat dicta dolores debitis, distinctio pariatur cumque, temporibus optio et quos? Eius tempora totam adipisci perferendis soluta officia, corrupti explicabo velit nemo enim fugit quos, quasi officiis vitae corporis ullam maiores. Suscipit quia quo minima. Molestiae illum, tempore nesciunt ipsum eveniet laborum id adipisci beatae nobis quidem sequi eaque sed in harum, accusamus sit assumenda consectetur. Recusandae modi aliquam ex officiis enim ab dolorum rem deserunt nisi dolores sunt, consequatur veritatis dolor quas! Facere deleniti dolorum, qui ipsa perspiciatis fugiat voluptas nobis reiciendis magnam sed sint voluptatum voluptates quis repudiandae minima odio facilis sunt magni deserunt neque! Natus mollitia pariatur eos amet cupiditate assumenda ipsa accusantium. Quaerat molestiae reprehenderit minima.</p>
 
 		</section>
+
+		<!-- 박스 한번 넣어보기 -->
+		<section>
+
+			<!-- 한개짜리 박스 -->
+			<div class="box-container">
+				<div class="full-box">
+						<div class="tile-header">
+								<div class="tile-headline">가나다라</div>
+								<div class="tile-headtext">
+										<p>‘집중 모드’는 집중이 필요한 순간에도, 휴식이 필요한 순간에도 당신이 매 순간 몰두할 수 있도록 도와줍니다. 원하는 집중 모드를 선택해 받고 싶은 알림만 울리도록
+												설정할 수 있죠. 무아지경으로 일에만 몰두할 수도, 방해 없이 느긋하게 저녁 식사를 즐길 수도 있습니다. 제시된 집중 모드 중 원하는 옵션을 골라 사용하거나,
+												자신만의 집중 모드를 직접 만들 수도 있답니다.</p>
+								</div>
+						</div>
+
+						<div class="tile-body">
+								<p>
+										이미지가 들어갈만한 곳. 순간에도, 휴식이 필요한 순간에도 당신이 매 순간 몰두할 수 있도록 도와줍니다.
+										원하는 집중 모드를 선택해 받고 싶은 알림만 울리도록 설정할 수 있죠. 무아지경으로 일에만 몰두할 수도,
+										방해 없이 느긋하게 저녁 식사를 즐길 수도 있습니다. 제시된 집중 모드 중 원하는 옵션을 골라 사용하거나,
+										자신만의 집중 모드를 직접 만들 수도 있답니다.
+								</p>
+						</div>
+				</div>
+		</div>
+		<!-- -----------------------1111111111----------- -->
+
+
+
+		</section>
+
 
 
 
