(0217)nav bar, 스크롤 애니메이션 구현

--- a/01.project/index.html
+++ b/01.project/index.html
@@ -11,45 +11,51 @@
 	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;900&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="./css/default.css">
 	<link rel="stylesheet" href="./css/main.css">
+	<script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.js"></script>
+
 </head>
 <body>
 	<div class="container">
+		<!-- 최상단 메뉴 -->
 		<nav class="global-nav">
-			<!-- 최상단 메뉴 -->
 			<div class="global-nav-links">
-				<a href="#" class="global-nav-item">menu1</a>
-				<a href="#" class="global-nav-item">menu2</a>
-				<a href="#" class="global-nav-item">menu3</a>
-				<a href="#" class="global-nav-item">menu4</a>
-				<a href="#" class="global-nav-item">menu5</a>
-				<a href="#" class="global-nav-item">menu6</a>
+				<a href="#" class="logo">페이지 로고</a>
+				<a href="#" class="global-nav-item">메뉴1</a>
+				<a href="#" class="global-nav-item" >메뉴2</a>
+				<a href="#" class="global-nav-item">로그인</a>
 			</div>
 		</nav>
 		<!-- 두번째 메뉴 -->
 		<nav class="local-nav">
 			<div class="local-nav-links">
-				<a href="#" class="logo">페이지 로고</a>
-				<a href="#">개요</a>
-				<a href="#">제품사양</a>
-				<a href="#">구입하기</a>
+				<a href="#" class="local-nav-item">menu1</a>
+				<a href="#" class="local-nav-item">menu2</a>
+				<a href="#" class="local-nav-item">menu3</a>
+				<a href="#" class="local-nav-item">menu4</a>
+				<a href="#" class="local-nav-item">menu5</a>
+				<a href="#" class="local-nav-item">menu6</a>
 			</div>
 		</nav>
 
+<!-- 
+			글넣는 구간은 <section></section>
+-->
 
-		<!-- 스크롤 구간 설정 -->
 		<!-- 0000000000000000000000000000000000000000 -->
 		<section class="scroll-section" id="scroll-section-0">
-			<h1>제목제목제목제목제목</h1>
-			<div class="sticky-elem main-message a">
+			<div>
+				<h1>제목제목제목제목제목</h1>
+			</div>
+			<div class="">
 				<p>내용1내용1내용1내용1내<br>내용1내용1내용1</p>
 			</div>
-			<div class="sticky-elem main-message b">
+			<div class="">
 				<p>내용2내용2내용2내용2<br>내용2내용2내용2내용2</p>
 			</div>
-			<div class="sticky-elem main-message c">
+			<div class="">
 				<p>내용3내용3내용3내용3<br>내용3내용3내용3내용3</p>
 			</div>
-			<div class="sticky-elem main-message d">
+			<div class="">
 				<p>내용4내용4내용4내용4<br>내용4내용4내용4내용4</p>
 			</div>
 			
@@ -63,24 +69,47 @@
 				<strong>제목 제목 제목</strong>
 				Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam illum harum alias iusto commodi blanditiis nihil ducimus saepe? Temporibus fuga consequatur ratione itaque sint esse magni accusantium nam odit quaerat quo alias facere praesentium mollitia, eveniet molestiae officia. Voluptatibus repellendus ullam natus suscipit sunt ipsam nam nesciunt laudantium. Quia doloribus sapiente eaque libero numquam eos, cumque placeat at adipisci ut fuga dolores eveniet in molestiae debitis veritatis beatae, sequi molestias ullam. Accusantium id repellendus qui nisi, voluptate rem cupiditate ipsum distinctio! Suscipit, repudiandae illum tempore, ducimus facilis, ad pariatur unde a provident quam modi. Sapiente laboriosam enim ducimus quis numquam asperiores consectetur? Quis, perferendis? Dignissimos nemo sunt sequi, veritatis perferendis voluptatum! Maxime deserunt ipsa velit. Earum numquam sapiente velit magnam quis! Ab, labore vitae cum nisi blanditiis voluptatum adipisci vel excepturi odio cumque dignissimos minus eum sapiente necessitatibus unde eos. Accusantium totam placeat fugit neque cupiditate, hic nulla rem repellat officia ex ipsum excepturi. Delectus eligendi eaque, consequatur explicabo provident earum accusamus. Libero obcaecati et maxime iste earum tempore, blanditiis ipsum nostrum autem ad delectus, nobis beatae animi quia voluptatem voluptas repellat! Sint numquam reiciendis dolorum ullam impedit voluptatum necessitatibus voluptatibus ipsam. Iusto rem fuga a voluptate sit nihil eum.
 			</p>
-
-
-
 		</section>
+		
+		
+		
+		
+		<!-- 카드 애니매이션 -->
+
+		<div class="card-background">
+			<div class="card-box">
+				<img src="./img/card1.png" alt="">
+			</div>
+			<div class="card-box">
+				<img src="./img/card2.png" alt="">
+			</div>
+			<div class="card-box">
+				<img src="./img/card3.png" alt="">
+			</div>
+
+		</div>
+
+
+
+
+
+
+
+
+
+		
 
 		<!-- 2222222222222222222222222222222222222222 -->
 		<section class="scroll-section" id="scroll-section-2">
-			<div class="sticky-elem main-message">
+			<div class="main-message">
 				<p><small>제목1제목1제목1</small>
 					내용1내용1내용1</p>
 			</div>
-			<div class="sticky-elem dese-message">
+			<div class="dese-message">
 				<p>내용2내용2내용2내용2내용2</p>
-				<div class="pin"></div>
 			</div>
-			<div class="sticky-elem dese-message">
+			<div class="dese-message">
 				<p>내용3내용3내용3내용3내용3<br>내용3내용3내용3내용3내용3</p>
-				<div class="pin"></div>
 			</div>
 
 
