--- a/01.project/index.html
+++ b/01.project/index.html
@@ -18,22 +18,26 @@
 	<div class="container">
 		<!-- 최상단 메뉴 -->
 		<nav class="global-nav">
-			<div class="global-nav-links">
-				<a href="#" class="logo">페이지 로고</a>
-				<a href="#" class="global-nav-item">메뉴1</a>
-				<a href="#" class="global-nav-item" >메뉴2</a>
-				<a href="#" class="global-nav-item">로그인</a>
+			<div class="nav-content">
+				<div class="global-nav-links">
+					<a href="#" class="logo">페이지 로고</a>
+					<a href="#" class="global-nav-item">메뉴1</a>
+					<a href="#" class="global-nav-item" >메뉴2</a>
+					<a href="#" class="global-nav-item">로그인</a>
+				</div>
 			</div>
 		</nav>
 		<!-- 두번째 메뉴 -->
 		<nav class="local-nav">
-			<div class="local-nav-links">
-				<a href="#" class="local-nav-item">menu1</a>
-				<a href="#" class="local-nav-item">menu2</a>
-				<a href="#" class="local-nav-item">menu3</a>
-				<a href="#" class="local-nav-item">menu4</a>
-				<a href="#" class="local-nav-item">menu5</a>
-				<a href="#" class="local-nav-item">menu6</a>
+			<div class="nav-content">
+				<div class="local-nav-links">
+					<a href="#" class="local-nav-item">menu1</a>
+					<a href="#" class="local-nav-item">menu2</a>
+					<a href="#" class="local-nav-item">menu3</a>
+					<a href="#" class="local-nav-item">menu4</a>
+					<a href="#" class="local-nav-item">menu5</a>
+					<a href="#" class="local-nav-item">menu6</a>
+				</div>
 			</div>
 		</nav>
 
