--- a/01.project/signup.html
+++ b/01.project/signup.html
@@ -115,7 +115,15 @@
           </div>
           <div class="form-floating">
             <input type="text" class="form-control form-textbox" id="floatingPassword" placeholder="Password">
-            <label for="floatingPassword">생년월일</label>
+            <label for="floatingPassword">전화번호</label>
+          </div>
+          <div>
+            <select class="form-select form-select-lg form-textbox" aria-label=".form-select-lg example">
+              <option selected>회원등급 설정</option>
+              <option value="1">One</option>
+              <option value="2">Two</option>
+              <option value="3">Three</option>
+            </select>
           </div>
         </div>
       </div>
