(0222)게시판 관련

--- a/01.project/board/board.html
+++ b/01.project/board/board.html
@@ -49,7 +49,7 @@
 
       <!-- 왼쪽 부분 -->
       <div class="layout">
-        <div class="layout-nav orange">
+        <div class="layout-nav">
           <div class="side-nav">
             <div class="person-info">
               <div class="person-image">
@@ -92,56 +92,56 @@
                   <div class="num">번호</div>
                   <div class="title">제목</div>
                   <div class="writer">글쓴이</div>
-                  <div class="data">작성일</div>
+                  <div class="date">작성일</div>
                   <div class="count">조회</div>
                 </div>
                 <div>
                   <div class="num">7</div>
                   <div class="title"><a href="view.html">제목제목제목제목제목</a></div>
                   <div class="writer">김진호</div>
-                  <div class="data">2022.02.21</div>
+                  <div class="date">2022.02.21</div>
                   <div class="count">77</div>
                 </div>
                 <div>
                   <div class="num">6</div>
                   <div class="title"><a href="view.html">제목제목제목제목제목</a></div>
                   <div class="writer">김진호</div>
-                  <div class="data">2022.02.21</div>
+                  <div class="date">2022.02.21</div>
                   <div class="count">77</div>
                 </div>
                 <div>
                   <div class="num">5</div>
                   <div class="title"><a href="view.html">제목제목제목제목제목</a></div>
                   <div class="writer">김진호</div>
-                  <div class="data">2022.02.21</div>
+                  <div class="date">2022.02.21</div>
                   <div class="count">77</div>
                 </div>
                 <div>
                   <div class="num">4</div>
                   <div class="title"><a href="view.html">제목제목제목제목제목</a></div>
                   <div class="writer">김진호</div>
-                  <div class="data">2022.02.21</div>
+                  <div class="date">2022.02.21</div>
                   <div class="count">77</div>
                 </div>
                 <div>
                   <div class="num">3</div>
                   <div class="title"><a href="view.html">제목제목제목제목제목</a></div>
                   <div class="writer">김진호</div>
-                  <div class="data">2022.02.21</div>
+                  <div class="date">2022.02.21</div>
                   <div class="count">77</div>
                 </div>
                 <div>
                   <div class="num">2</div>
                   <div class="title"><a href="view.html">제목제목제목제목제목</a></div>
                   <div class="writer">김진호</div>
-                  <div class="data">2022.02.21</div>
+                  <div class="date">2022.02.21</div>
                   <div class="count">77</div>
                 </div>
                 <div>
                   <div class="num">1</div>
                   <div class="title"><a href="view.html">제목제목제목제목제목</a></div>
                   <div class="writer">김진호</div>
-                  <div class="data">2022.02.21</div>
+                  <div class="date">2022.02.21</div>
                   <div class="count">77</div>
                 </div>
                 
@@ -162,7 +162,7 @@
               </div>
               <!-- 버튼 영역 -->
               <div class="btn-wrap">
-                <a href="#" class="on">등록</a>
+                <a href="./write.html" class="on">등록</a>
                 <!-- <a href="#" class="">수정</a> -->
               </div>
 
