--- a/01.project/board/edit.html
+++ b/01.project/board/edit.html
@@ -28,48 +28,47 @@
               <p>공지사항을 안내해 드립니다.</p>
             </div>
 
-            <div class="board-list-wrap">
+            <div class="board-write-wrap">
               <!-- 글 내용 영역 -->
-              <div class="board-view">
+              <div class="board-write">
                 <div class="title">
-                  글 제목제목제목제목제목제목제목
+                  <dl>
+                    <dt>제목</dt>
+                    <dd><input type="text" placeholder="제목 입력" value="글 제목이 들어갑니다."></dd>
+                  </dl>
                 </div>
 
                 <div class="info">
                   <dl>
-                    <dt>번호</dt>
-                    <dd>1</dd>
-                  </dl>
-                  <dl>
                     <dt>글쓴이</dt>
-                    <dd>김진호</dd>
+                    <dd><input type="text" placeholder="글쓴이 입력" value="김진호"></dd>
                   </dl>
                   <dl>
-                    <dt>작성일</dt>
-                    <dd>2022.02.21</dd>
-                  </dl>
-                  <dl>
-                    <dt>조회</dt>
-                    <dd>77</dd>
+                    <dt>비밀번호</dt>
+                    <dd><input type="password" placeholder="비밀번호 입력" value="1234"></dd>
                   </dl>
                 </div>
 
                 <div class="content">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci cupiditate quis at eligendi itaque aperiam officiis,<br>
-                  iste quibusdam reiciendis eveniet quaerat tempore recusandae quos blanditiis, sequi dolores! Dicta est similique at molestiae<br>
-                  laudantium? Labore quia quos ad fuga quam velit ipsum sunt, tempora accusamus repellat ullam? Necessitatibus perferendis corrupti<br>
-                  qui aliquam nulla, rerum nihil porro magni libero modi magnam voluptatibus voluptates? Consequatur, ipsum. Distinctio cumque,<br>
-                  reprehenderit quibusdam asperiores voluptatem et aut qui temporibus doloremque odio odit, tempore quasi adipisci quisquam fugiat,<br>
-                  perferendis deserunt sint est in! Quae qui tempore dolor quod nesciunt itaque perferendis maxime consequatur eos, pariatur aperiam saepe!
+                  <textarea name="" id="" cols="30" rows="10" placeholder="내용입력">
+Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat deleniti ut quas
+ qui itaque animi ad odio consequuntur.Voluptate quod aliquam id, molestias vel 
+ soluta perferendis non sequi illum voluptates voluptatibus perspiciatis accusantium 
+ voluptatem repellat. Et perspiciatis dignissimos, qui a voluptate
+  tempore. Soluta rem ratione inventore nisi explicabo suscipit exercitationem at aliquam 
+  ullam praesentium culpa quidem eum reiciendis, nemo dolorem labore iusto laboriosam a 
+  quasi. Error tenetur perspiciatis sapiente at dolorum facere, blanditiis, impedit 
+  maxime voluptates qui ea. Autem delectus sed earum voluptas, ducimus quia pariatur 
+  molestias officiis cum dolores aspernatur recusandae soluta qui corporis? Eum neque tenetur nulla quaerat!
+                  </textarea>
                 </div>
-
                 
               </div>
               
               <!-- 버튼 영역 -->
               <div class="btn-wrap">
-                <a href="./board.html" class="on">목록</a>
-                <a href="./edit.html" class="">수정</a>
+                <a href="./view.html" class="on">수정</a>
+                <a href="./board.html" class="">취소</a>
               </div>
 
             </div>
