--- a/01.project/signup.html
+++ b/01.project/signup.html
@@ -120,9 +120,9 @@
           <div>
             <select class="form-select form-select-lg form-textbox" aria-label=".form-select-lg example">
               <option selected>회원등급 설정</option>
-              <option value="1">One</option>
-              <option value="2">Two</option>
-              <option value="3">Three</option>
+              <option value="1">세대원</option>
+              <option value="2">세대주</option>
+              <option value="3">관리자</option>
             </select>
           </div>
         </div>
