--- a/01.project/board/write.html
+++ b/01.project/board/write.html
@@ -57,7 +57,7 @@
               
               <!-- 버튼 영역 -->
               <div class="btn-wrap">
-                <a href="#" class="on">등록</a>
+                <a href="./board.html" class="on">등록</a>
                 <a href="./board.html" class="">취소</a>
               </div>
 
