--- a/02.working/refer/index.html
+++ b/02.working/refer/index.html
@@ -12,18 +12,15 @@
 	<link rel="stylesheet" href="./css/default.css">
 	<link rel="stylesheet" href="./css/main.css">
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.js"></script>
-	<script src="./js/includeHTML.js"></script>
+	<script src="./includeHTML.js"></script>
 
 </head>
 <body>
 	<div class="container">
 		<!-- 네비게이션 바 -->
 		<div data-include-path="nav.html"></div>
-		
 
-<!-- 
-			글넣는 구간은 <section></section>
--->
+<!-- 글넣는 구간은 <section></section> -->
 
 		<!-- 0000000000000000000000000000000000000000 -->
 		<section class="scroll-section" id="scroll-section-0">
@@ -197,14 +194,17 @@
 
 
 
-		<!-- FFFFFFFFFFFFFFFFFFFFFFFFF -->
+		<!-- footer -->
+		
 		<div data-include-path="footer.html"></div>
-
 
 <!-- container -->
 	</div>
 
 
 	<script type="text/javascript" src="./js/main.js"></script>
+
+
+
 </body>
 </html>
