--- a/01.project/board/board.html
+++ b/01.project/board/board.html
@@ -137,7 +137,7 @@
             </div>
             <!-- 버튼 영역 -->
             <div class="btn-wrap">
-              <a href="./write.html" class="on">등록</a>
+              <a href="./write.html" class="on">글쓰기</a>
               <!-- <a href="#" class="">수정</a> -->
             </div>
 
