--- a/01.project/board/edit.html
+++ b/01.project/board/edit.html
@@ -71,7 +71,7 @@ Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat deleniti ut qua
               
               <!-- 버튼 영역 -->
               <div class="btn-wrap">
-                <a href="./view.html" class="on">수정</a>
+                <a href="./view.html" class="on">완료</a>
                 <a href="./board.html" class="">취소</a>
               </div>
 
