--- a/02.working/refer/A04EventOn.html
+++ b/02.working/refer/A04EventOn.html
@@ -49,10 +49,11 @@
 					} else {
 						makeData = data.filter(function(value, index){
 							if(value.region === result) return true
+							
 						});
 					}
 				});
-				// console.log(makeData);
+				console.log(makeData);
 
 				// 만들기 전에 기존에 tbody에 있던 모든 tr을 삭제하고 아래에 만들어지는 요소로 출력
 				// 요소로 출력
