--- a/01.project/index.html
+++ b/01.project/index.html
@@ -21,16 +21,29 @@
 		<!-- 네비게이션 바 -->
 		<div data-include-path="nav.html"></div>
 		
-
 <!-- 
 			글넣는 구간은 <section></section>
 -->
 
 		<!-- 0000000000000000000000000000000000000000 -->
 		<section class="scroll-section" id="scroll-section-0">
-			<div>
-				<h1>제목제목제목제목제목</h1>
+			<div class="main-view">
+				<div class="main-title">
+					<h1><span>277square</span></h1>
+				</div>
+				<div class="main-image-box">
+					<img src="./img/mainday.jpeg" alt="" id="mainday">
+				</div>
+				
+				<div class="main-image-box">
+					<img src="./img/mainnight.jpeg" alt="" id="mainnight">
+				</div>
+				<div class="sub-title">
+					<h1><span>환영합니다.</span></h1>
+				</div>
+				
 			</div>
+
 			<div class="">
 				<p>내용1내용1내용1내용1내<br>내용1내용1내용1</p>
 			</div>
