--- a/01.project/nav.html
+++ b/01.project/nav.html
@@ -5,8 +5,8 @@
 			<div class="nav-content">
 				<div class="global-nav-links">
 					<a href="#" class="logo">페이지 로고</a>
-					<a href="#" class="global-nav-item">메뉴1</a>
-					<a href="#" class="global-nav-item" >메뉴2</a>
+					<a href="#" class="global-nav-item">회원가입</a>
+					<a href="#" class="global-nav-item" >마이페이지</a>
 					<a href="#" class="global-nav-item">로그인</a>
 				</div>
 			</div>
@@ -17,12 +17,12 @@
 		<nav class="local-nav">
 			<div class="nav-content">
 				<div class="local-nav-links">
-					<a href="#" class="local-nav-item">menu1</a>
-					<a href="#" class="local-nav-item">menu2</a>
-					<a href="#" class="local-nav-item">menu3</a>
-					<a href="#" class="local-nav-item">menu4</a>
-					<a href="#" class="local-nav-item">menu5</a>
-					<a href="#" class="local-nav-item">menu6</a>
+					<a href="#" class="local-nav-item">Home</a>
+					<a href="#" class="local-nav-item">공지사항</a>
+					<a href="#" class="local-nav-item">상가정보</a>
+					<a href="#" class="local-nav-item">동아리</a>
+					<a href="#" class="local-nav-item">이벤트</a>
+					<a href="#" class="local-nav-item">contact</a>
 				</div>
 			</div>
 		</nav>
