--- a/02.working/refer/A04EventOn.html
+++ b/02.working/refer/A04EventOn.html
@@ -53,7 +53,7 @@
 						});
 					}
 				});
-				console.log(makeData);
+				// console.log(makeData);
 
 				// 만들기 전에 기존에 tbody에 있던 모든 tr을 삭제하고 아래에 만들어지는 요소로 출력
 				// 요소로 출력
@@ -92,7 +92,7 @@
 			// Event 위임. 이벤트를 할당할 상위요소에 이벤트를 기술
 			// on 두번쨰 매개변수가 상위 요소가 전달한 이벤틀르 위임 받아서 실행할 요소
 			$('#list').on('click', 'button', function(evt) {
-				// console.log(this);
+				console.log(this);
 
 				var no = $(this).data('no');
 				var value = data[no - 1];
