--- a/01.project/login.html
+++ b/01.project/login.html
@@ -10,6 +10,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;900&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="./css/default.css">
+  <link rel="stylesheet" href="./css/nav.css">
 	<link rel="stylesheet" href="./css/main.css">
   <link rel="stylesheet" href="./css/login.css">
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.js"></script>
@@ -22,7 +23,7 @@
   <div data-include-path="nav.html"></div>
 	<div class="app-container">
     <form class="signin-container">
-      <div class="signin-logo-box"><img src="./img/sample-logo.jpg" class="signin-logo"></img></div>
+      <div class="signin-logo-box"><img src="./img/logo.png" class="signin-logo"></img></div>
       <div class="signin-header">
           <h1 >ID</h1>
           <p>나의 계정</p>
@@ -46,7 +47,6 @@
         </div>
       </div>
     </form>
-		
 
 
 
