--- a/01.project/nav.html
+++ b/01.project/nav.html
@@ -4,10 +4,10 @@
 		<nav class="global-nav">
 			<div class="nav-content">
 				<div class="global-nav-links">
-					<a href="#" class="logo">페이지 로고</a>
-					<a href="#" class="global-nav-item">회원가입</a>
-					<a href="#" class="global-nav-item" >마이페이지</a>
-					<a href="#" class="global-nav-item">로그인</a>
+					<a href="./index.html" class="logo"><img src="./img/logo.png"></a>
+					<a href="./signup.html" class="global-nav-item">회원가입</a>
+					<a href="./mypage.html" class="global-nav-item" >마이페이지</a>
+					<a href="./login.html" class="global-nav-item">로그인</a>
 				</div>
 			</div>
 		</nav>
@@ -17,10 +17,10 @@
 		<nav class="local-nav">
 			<div class="nav-content">
 				<div class="local-nav-links">
-					<a href="#" class="local-nav-item">Home</a>
+					<a href="./index.html" class="local-nav-item">Home</a>
 					<a href="#" class="local-nav-item">공지사항</a>
-					<a href="#" class="local-nav-item">상가정보</a>
-					<a href="#" class="local-nav-item">동아리</a>
+					<a href="./store.html" class="local-nav-item">상가정보</a>
+					<a href="#" class="local-nav-item">커뮤니티 센터</a>
 					<a href="#" class="local-nav-item">이벤트</a>
 					<a href="#" class="local-nav-item">contact</a>
 				</div>
