--- a/01.project/index.html
+++ b/01.project/index.html
@@ -10,6 +10,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;900&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="./css/default.css">
+	<link rel="stylesheet" href="./css/nav.css">
 	<link rel="stylesheet" href="./css/main.css">
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.js"></script>
 	<script src="./js/includeHTML.js"></script>
@@ -29,7 +30,7 @@
 		<section class="scroll-section" id="scroll-section-0">
 			<div class="main-view">
 				<div class="main-title">
-					<h1><span>277square</span></h1>
+					<h1><span>277<br>SQUARE</span></h1>
 				</div>
 				<div class="main-image-box">
 					<img src="./img/mainday.jpeg" alt="" id="mainday">
@@ -56,7 +57,6 @@
 			<div class="">
 				<p>내용4내용4내용4내용4<br>내용4내용4내용4내용4</p>
 			</div>
-			
 
 
 		</section>
