--- a/01.project/mypage.html
+++ b/01.project/mypage.html
@@ -10,6 +10,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;900&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="./css/default.css">
+  <link rel="stylesheet" href="./css/nav.css">
 	<link rel="stylesheet" href="./css/main.css">
   <link rel="stylesheet" href="./css/mypage.css">
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.js"></script>
