--- a/01.project/contact.html
+++ b/01.project/contact.html
@@ -7,6 +7,7 @@
 	
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;900&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="./css/default.css">
 	<link rel="stylesheet" href="./fontawesome/css/all.min.css">
@@ -16,7 +17,7 @@
 
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.js"></script>
 	<script src="./js/includeHTML.js"></script>
-	<title>Layout</title>
+	<title>고객지원</title>
 
 </head>
 <body>
@@ -37,20 +38,51 @@
 					<h1>저희를 쉽게 만나는 방법!</h1>
 				</div>
 				<div class="info-desc">
-					<p>내용내용내용내용</p>
+					<p>수원시 광교호수공원로 277</p>
 					<p>내용내용내용내용</p>
 					<p>내용내용내용내용</p>
 				</div>
 				<div class="info-icon">
-					<i class="fa-brands fa-facebook-square fa-3x"></i>
-					<i class="fa-brands fa-instagram fa-3x"></i>
-					<i class="fa-brands fa-twitter-square fa-3x"></i>
-					<i class="fa-solid fa-envelope-open-text fa-3x"></i>
+					<a href="#">
+						<div class="contact-icon-box">
+							<i class="fa-brands fa-facebook-square fa-3x"></i>
+						</div>
+					</a>
+					<a href="#">
+						<div class="contact-icon-box">
+							<i class="fa-brands fa-instagram fa-3x"></i>
+						</div>
+					</a>
+					<a href="#">
+						<div class="contact-icon-box">
+							<i class="fa-brands fa-twitter-square fa-3x"></i>
+						</div>
+					</a>
+					<a href="#">
+						<div class="contact-icon-box">
+							<i class="fa-solid fa-envelope-open-text fa-3x"></i>
+						</div>
+					</a>
 				</div>
 
 			</div>
 
 			<div class="input-section">
+				<div class="form-floating contact-form-floating">
+					<input type="text" class="form-control form-textbox" id="contact-name-input" placeholder="이름을 입력해주세요.">
+					<label for="contact-name-input">이름을 입력해주세요.</label>
+				</div>
+				<div class="form-floating contact-form-floating">
+					<input type="email" class="form-control form-textbox" id="contact-email-input" placeholder="이메일을 입력해주세요.">
+					<label for="contact-email-input">이메일을 입력해주세요.</label>
+				</div>
+				<div class="contact-textarea-section">
+					<label for="contact-textarea" class="form-label"></label>
+					<textarea class="form-control" id="contact-textarea" rows="10" placeholder="문의사항을 입력해주세요."></textarea>
+				</div>
+				<div class="btn-box">
+					<button type="button" class="btn btn-primary button" >완료</button>
+				</div>
 
 			</div>
 
