(0226)로그인, 회원가입

--- a/01.project/login.html
+++ b/01.project/login.html
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="./css/login.css">
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.js"></script>
 	<script src="./js/includeHTML.js"></script>
+	<script src="./js/login.js"></script>
 	<title>로그인</title>
 
 </head>
@@ -22,7 +23,7 @@
   <!-- 네비게이션 바 -->
   <div data-include-path="nav.html"></div>
 	<div class="app-container">
-    <form class="signin-container">
+    <form class="signin-container" id="input-section">
       <div class="signin-logo-box"><img src="./img/logo.png" class="signin-logo"></img></div>
       <div class="signin-header">
           <h1 >ID</h1>
@@ -30,19 +31,25 @@
       </div>
       <div class="form-group">
         <div class="form-box">
-          <form>
             <div class="id-password-input">
-              <input type="text" placeholder="ID" class="form-textbox" id="id-text-field">
-              <input type="text" placeholder="PASSWORD" class="form-textbox" id="password-text-field">
+              <input type="text" placeholder="ID" class="form-textbox" name="id-text-field" id="id-text-field">
+              <input type="text" placeholder="PASSWORD" class="form-textbox" name="password-text-field" id="password-text-field">
+            </div>
+            <div class="valid-check">
+              <span title="myid-value" class="valid-check"></span>
             </div>
               
-            <div class="remember-account">
-              <input type="checkbox" id="remember-me"><label for="remember-me" id="remember-me-label">아이디 저장</label>
+            <div class="submit-section">
+              <div class="remember-account">
+                <input type="checkbox" id="remember-me"><label for="remember-me" id="remember-me-label">아이디 저장</label>
+              </div>
+              <div class="btn-box">
+                <button type="button" class="btn btn-primary button" name="login-button" id="login-button">로그인</button>
+              </div>
             </div>
             <div class="forgot">
-              <a href="#">아이디 찾기</a>
+              <span>아이디가 기억나지 않습니까?</span><a href="#">아이디 찾기</a>
             </div>
-          </form>
           <div class="blank"></div>
         </div>
       </div>
