--- a/01.project/board/view.html
+++ b/01.project/board/view.html
@@ -4,16 +4,17 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Home</title>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<!-- google font noto sans korean -->
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;900&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="../css/default.css">
+	<link rel="stylesheet" href="../css/nav.css">
 	<link rel="stylesheet" href="../css/main.css">
   <link rel="stylesheet" href="../css/board/board.css">
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.js"></script>
 	<script src="../js/includeHTML.js"></script>
+	<title>Home</title>
 	
 
 </head>
