--- a/01.project/nav.html
+++ b/01.project/nav.html
@@ -17,12 +17,12 @@
 		<nav class="local-nav">
 			<div class="nav-content">
 				<div class="local-nav-links">
-					<a href="./index.html" class="local-nav-item">Home</a>
-					<a href="#" class="local-nav-item">공지사항</a>
-					<a href="./store.html" class="local-nav-item">상가정보</a>
+					<a href="index.html" class="local-nav-item">Home</a>
+					<a href="noticeBoard.html" class="local-nav-item">공지사항</a>
+					<a href="store.html" class="local-nav-item">상가정보</a>
 					<a href="#" class="local-nav-item">커뮤니티 센터</a>
 					<a href="#" class="local-nav-item">이벤트</a>
-					<a href="#" class="local-nav-item">contact</a>
+					<a href="contact.html" class="local-nav-item">contact</a>
 				</div>
 			</div>
 		</nav>
